--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "./node_modules/.bin/webpack --watch"
+    "webpack": "./node_modules/.bin/webpack --watch",
+    "postinstall": "./node_modules/.bin/webpack"
+  },
+  "engines": {
+    "node": "6.2.2",
+    "npm": "3.9.5"
   },
   "repository": {
     "type": "git",
