--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.16.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-filepicker": "^0.10.3",
     "react-modal": "^1.4.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
