--- a/test/fixtures/spots.yml
+++ b/test/fixtures/spots.yml
@@ -17,6 +17,7 @@
 #  image_file_size    :integer
 #  image_updated_at   :datetime
 #  name               :string           not null
+#  price              :integer          not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
