--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "lodash": "^4.16.3",
+    "moment": "^2.15.1",
     "react": "^15.3.2",
+    "react-addons-shallow-compare": "^15.3.2",
+    "react-dates": "^3.3.0",
     "react-dom": "^15.3.2",
     "react-filepicker": "^0.10.3",
     "react-modal": "^1.4.0",
