--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,6 +10,8 @@
 #  email           :string           not null
 #  fname           :string           not null
 #  lname           :string           not null
+#  uid             :string
+#  provider        :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
